--- a/apps/memberApp/src/localization/zh/zh.json
+++ b/apps/memberApp/src/localization/zh/zh.json
@@ -123,7 +123,13 @@
     "max_recording_time": {
       "title": "已达到最大录音时间",
       "message": "录音已达到最大时长限制。"
-    }
+    },
+    "level" : "等级",
+    "remaining_attempts" : "剩余尝试次数",
+    "correct_answer":"正确答案",
+    "incorrect_answer":"错误答案",
+    "expected_direction" : "预期方向",
+    "previous_level" : "上一级"
   },
   "eye_tiredness": {
     "title": "眼睛疲劳测试",
