feat: enhance localization for vision tests and update About screen with new modals for Landolt C Test and Eye Tiredness Test

--- a/apps/memberApp/src/localization/en/en.json
+++ b/apps/memberApp/src/localization/en/en.json
@@ -51,7 +51,17 @@
     "signIn": "Sign In",
     "personalData": "Personal Data",
     "other": "Other",
-    "guest": "Guest"
+    "guest": "Guest",
+    "vision_test_info": "Vision Test Information",
+    "learn_more": "Learn more about our vision testing methods",
+    "landolt_c_test": "Landolt C Test",
+    "visual_acuity_measurement": "Visual acuity measurement",
+    "eye_tiredness": "Eye Tiredness",
+    "fatigue_detection": "Fatigue detection",
+    "eye_tiredness_info": "Eye Tiredness Info",
+    "eye_tiredness_test": "Eye Tiredness Test",
+    "eye_tiredness_description": "The Eye Tiredness test helps detect signs of visual fatigue and strain. It monitors eye movement patterns and blink rates to assess tiredness levels.",
+    "close": "Close"
   },
   "profile": {
     "name": "Name",
@@ -142,7 +152,34 @@
     "correct_answer":"Correct Answer",
     "incorrect_answer":"Incorrect Answer",
     "expected_direction" : "Expected Direction",
-    "previous_level" : "Previous Level"
+    "previous_level" : "Previous Level",
+    "info": {
+      "title": "About Landolt C Test",
+      "subtitle": "A scientific method for measuring visual acuity",
+      "what_is_title": "What is the Landolt C Test?",
+      "what_is_content": "The Landolt C test is a standardized method for measuring visual acuity. It uses rings with gaps in different directions (up, down, left, right) to determine how well you can see at various distances.",
+      "how_works_title": "How Does It Work?",
+      "how_works_content": "The test presents rings with gaps in random directions. You identify the gap direction, and the system adjusts the ring size based on your responses. Smaller rings indicate better visual acuity.",
+      "test_types_title": "Test Types Available",
+      "test_types_content": "Two testing methods are available: Swipe Test (touch gestures) and Voice Test (speech recognition). Both methods provide accurate results and can be used based on your preference.",
+      "results_title": "Understanding Results",
+      "results_content": "Results are displayed in multiple formats: Score (number of correct answers), LogMAR (logarithmic scale), and Snellen notation (traditional 20/20 format). Lower LogMAR values indicate better vision.",
+      "accuracy_title": "Accuracy & Reliability",
+      "accuracy_content": "The Landolt C test is clinically validated and provides reliable visual acuity measurements. However, it's designed for screening purposes and should not replace professional eye examinations.",
+      "key_features": "Key Features",
+      "feature_scientific": "Scientifically Validated",
+      "feature_mobile": "Mobile Optimized",
+      "feature_quick": "Quick & Easy",
+      "feature_track": "Progress Tracking",
+      "test_process": "Test Process",
+      "step_1": "Select your preferred test type (swipe or voice)",
+      "step_2": "Follow distance measurement instructions",
+      "step_3": "Test each eye separately by covering the other",
+      "step_4": "Identify the gap direction in the Landolt C rings",
+      "disclaimer_title": "Important Disclaimer",
+      "disclaimer_content": "This test is for screening purposes only and is not a substitute for professional eye examination. Always consult with an eye care professional for comprehensive vision assessment.",
+      "close": "Got It"
+    }
   },
   "eye_tiredness": {
     "title": "Eye Tiredness Test",
