--- a/apps/memberApp/src/localization/ms/ms.json
+++ b/apps/memberApp/src/localization/ms/ms.json
@@ -51,7 +51,17 @@
     "signIn": "Log Masuk",
     "personalData": "Data Peribadi",
     "other": "Lain-lain",
-    "guest": "Tetamu"
+    "guest": "Tetamu",
+    "vision_test_info": "Maklumat Ujian Penglihatan",
+    "learn_more": "Ketahui lebih lanjut tentang kaedah ujian penglihatan kami",
+    "landolt_c_test": "Ujian Landolt C",
+    "visual_acuity_measurement": "Pengukuran ketajaman penglihatan",
+    "eye_tiredness": "Keletihan Mata",
+    "fatigue_detection": "Pengesanan keletihan",
+    "eye_tiredness_info": "Maklumat Keletihan Mata",
+    "eye_tiredness_test": "Ujian Keletihan Mata",
+    "eye_tiredness_description": "Ujian Keletihan Mata membantu mengesan tanda-tanda keletihan visual dan tekanan. Ia memantau corak pergerakan mata dan kadar kelipan untuk menilai tahap keletihan.",
+    "close": "Tutup"
   },
   "profile": {
     "name": "Nama",
@@ -143,7 +153,34 @@
     "correct_answer": "Jawapan Betul",
     "incorrect_answer": "Jawapan Salah",
     "expected_direction": "Arah Dijangka",
-    "previous_level": "Tahap Sebelumnya"
+    "previous_level": "Tahap Sebelumnya",
+    "info": {
+      "title": "Mengenai Ujian Landolt C",
+      "subtitle": "Kaedah saintifik untuk mengukur ketajaman penglihatan",
+      "what_is_title": "Apakah Ujian Landolt C?",
+      "what_is_content": "Ujian Landolt C adalah kaedah piawai untuk mengukur ketajaman penglihatan. Ia menggunakan cincin dengan jurang dalam arah berbeza (atas, bawah, kiri, kanan) untuk menentukan seberapa baik anda dapat melihat pada pelbagai jarak.",
+      "how_works_title": "Bagaimana Ia Berfungsi?",
+      "how_works_content": "Ujian mempersembahkan cincin dengan jurang dalam arah rawak. Anda mengenal pasti arah jurang, dan sistem menyesuaikan saiz cincin berdasarkan respons anda. Cincin yang lebih kecil menunjukkan ketajaman penglihatan yang lebih baik.",
+      "test_types_title": "Jenis Ujian Tersedia",
+      "test_types_content": "Dua kaedah ujian tersedia: Ujian Leret (isyarat sentuhan) dan Ujian Suara (pengiktirafan pertuturan). Kedua-dua kaedah memberikan keputusan yang tepat dan boleh digunakan berdasarkan pilihan anda.",
+      "results_title": "Memahami Keputusan",
+      "results_content": "Keputusan dipaparkan dalam pelbagai format: Skor (bilangan jawapan betul), LogMAR (skala logaritma), dan notasi Snellen (format 20/20 tradisional). Nilai LogMAR yang lebih rendah menunjukkan penglihatan yang lebih baik.",
+      "accuracy_title": "Ketepatan & Kebolehpercayaan",
+      "accuracy_content": "Ujian Landolt C telah disahkan secara klinikal dan memberikan pengukuran ketajaman penglihatan yang boleh dipercayai. Walau bagaimanapun, ia direka untuk tujuan saringan dan tidak boleh menggantikan pemeriksaan mata profesional.",
+      "key_features": "Ciri-ciri Utama",
+      "feature_scientific": "Disahkan Secara Saintifik",
+      "feature_mobile": "Dioptimumkan untuk Mudah Alih",
+      "feature_quick": "Cepat & Mudah",
+      "feature_track": "Penjejakan Kemajuan",
+      "test_process": "Proses Ujian",
+      "step_1": "Pilih jenis ujian pilihan anda (leret atau suara)",
+      "step_2": "Ikuti arahan pengukuran jarak",
+      "step_3": "Uji setiap mata secara berasingan dengan menutup yang lain",
+      "step_4": "Kenal pasti arah jurang dalam cincin Landolt C",
+      "disclaimer_title": "Penafian Penting",
+      "disclaimer_content": "Ujian ini adalah untuk tujuan saringan sahaja dan bukan pengganti pemeriksaan mata profesional. Sentiasa berunding dengan profesional penjagaan mata untuk penilaian penglihatan yang komprehensif.",
+      "close": "Faham"
+    }
   },
   "eye_tiredness": {
     "title": "Ujian Keletihan Mata",
