--- a/apps/memberApp/src/localization/zh/zh.json
+++ b/apps/memberApp/src/localization/zh/zh.json
@@ -51,7 +51,17 @@
     "signIn": "登录",
     "personalData": "个人资料",
     "other": "其他",
-    "guest": "访客"
+    "guest": "访客",
+    "vision_test_info": "视力测试信息",
+    "learn_more": "了解更多关于我们的视力测试方法",
+    "landolt_c_test": "兰氏环测试",
+    "visual_acuity_measurement": "视力测量",
+    "eye_tiredness": "眼睛疲劳",
+    "fatigue_detection": "疲劳检测",
+    "eye_tiredness_info": "眼睛疲劳信息",
+    "eye_tiredness_test": "眼睛疲劳测试",
+    "eye_tiredness_description": "眼睛疲劳测试有助于检测视觉疲劳和疲劳的迹象。它监测眼球运动模式和眨眼频率来评估疲劳程度。",
+    "close": "关闭"
   },
   "profile": {
     "name": "姓名",
@@ -142,7 +152,34 @@
     "correct_answer":"正确答案",
     "incorrect_answer":"错误答案",
     "expected_direction" : "预期方向",
-    "previous_level" : "回到上一级"
+    "previous_level" : "回到上一级",
+    "info": {
+      "title": "关于兰氏环测试",
+      "subtitle": "一种测量视力的科学方法",
+      "what_is_title": "什么是兰氏环测试？",
+      "what_is_content": "兰氏环测试是一种标准化的视力测量方法。它使用不同方向（上、下、左、右）有缺口的环形图案来确定您在不同距离下的视力状况。",
+      "how_works_title": "它是如何工作的？",
+      "how_works_content": "测试会呈现随机方向缺口的环形图案。您需要识别缺口的方向，系统会根据您的回答调整环形大小。较小的环形表示更好的视力。",
+      "test_types_title": "可用的测试类型",
+      "test_types_content": "提供两种测试方法：滑动测试（触摸手势）和语音测试（语音识别）。两种方法都能提供准确的结果，您可以根据喜好选择使用。",
+      "results_title": "理解结果",
+      "results_content": "结果以多种格式显示：得分（正确答案数量）、LogMAR（对数刻度）和Snellen表示法（传统的20/20格式）。LogMAR值越低表示视力越好。",
+      "accuracy_title": "准确性和可靠性",
+      "accuracy_content": "兰氏环测试经过临床验证，可提供可靠的视力测量。但是，它仅用于筛查目的，不能替代专业的眼科检查。",
+      "key_features": "主要特点",
+      "feature_scientific": "科学验证",
+      "feature_mobile": "移动优化",
+      "feature_quick": "快速简便",
+      "feature_track": "进度跟踪",
+      "test_process": "测试流程",
+      "step_1": "选择您偏好的测试类型（滑动或语音）",
+      "step_2": "按照距离测量说明操作",
+      "step_3": "分别测试每只眼睛，遮住另一只",
+      "step_4": "识别兰氏环中缺口的方向",
+      "disclaimer_title": "重要声明",
+      "disclaimer_content": "此测试仅用于筛查目的，不能替代专业的眼科检查。请始终咨询眼科专业人士进行全面的视力评估。",
+      "close": "知道了"
+    }
   },
   "eye_tiredness": {
     "title": "眼睛疲劳测试",
