feat: add history screen for Landolt test results and eye tiredness, including detailed views and localization updates

--- a/apps/memberApp/src/localization/en/en.json
+++ b/apps/memberApp/src/localization/en/en.json
@@ -107,6 +107,23 @@
     "continue": "Continue",
     "overview": "Overview"
   },
+  "history": {
+    "title": "History",
+    "landolt_test_results": "Landolt Test Results",
+    "eye_tiredness_results": "Eye Tiredness Results",
+    "recent_test_results": "Recent test results",
+    "no_test_results": "No test results found",
+    "loading": "Loading...",
+    "left_eye": "Left Eye",
+    "right_eye": "Right Eye",
+    "logmar": "LogMAR:",
+    "snellen": "Snellen:",
+    "view_details": "View Details",
+    "view_all_results": "View All Results",
+    "fatigue_level": "Fatigue Level",
+    "duration": "Duration",
+    "blink_rate": "Blink Rate"
+  },
   "landolt":{
     "header":"Landolt C Test",
     "title": "Landolt C Visual Acuity Test",
@@ -153,6 +170,34 @@
     "incorrect_answer":"Incorrect Answer",
     "expected_direction" : "Expected Direction",
     "previous_level" : "Previous Level",
+    "detail": {
+      "title": "Test Result Details",
+      "loading": "Loading test result...",
+      "error": "Test result not found",
+      "go_back": "Go Back",
+      "test_summary": "Test Summary",
+      "average_score": "Average Score",
+      "average_logmar": "Average LogMAR",
+      "left_eye_results": "Left Eye Results",
+      "right_eye_results": "Right Eye Results",
+      "score": "Score",
+      "logmar": "LogMAR",
+      "snellen": "Snellen",
+      "vision_status": "Vision Status:",
+      "eye_comparison": "Eye Comparison",
+      "left": "Left",
+      "right": "Right",
+      "recommendations": "Recommendations",
+      "recommendation_exam": "• Consider scheduling an eye examination",
+      "recommendation_monitor": "• Monitor vision changes regularly",
+      "recommendation_breaks": "• Take regular breaks during screen time",
+      "recommendation_continue": "• Continue regular vision monitoring",
+      "recommendation_practices": "• Maintain good eye health practices",
+      "recommendation_checkups": "• Schedule annual eye checkups",
+      "take_new_test": "Take New Test",
+      "back_to_history": "Back to History",
+      "user_id": "User ID:"
+    },
     "info": {
       "title": "About Landolt C Test",
       "subtitle": "A scientific method for measuring visual acuity",
