--- a/apps/memberApp/src/localization/zh/zh.json
+++ b/apps/memberApp/src/localization/zh/zh.json
@@ -107,6 +107,23 @@
     "continue": "继续",
     "overview": "概览"
   },
+  "history": {
+    "title": "历史记录",
+    "landolt_test_results": "兰氏环测试结果",
+    "eye_tiredness_results": "眼睛疲劳测试结果",
+    "recent_test_results": "最近的测试结果",
+    "no_test_results": "未找到测试结果",
+    "loading": "加载中...",
+    "left_eye": "左眼",
+    "right_eye": "右眼",
+    "logmar": "LogMAR：",
+    "snellen": "Snellen：",
+    "view_details": "查看详情",
+    "view_all_results": "查看所有结果",
+    "fatigue_level": "疲劳程度",
+    "duration": "持续时间",
+    "blink_rate": "眨眼频率"
+  },
   "landolt": {
     "header": "兰氏环测试",
     "title": "兰氏环视力测试",
@@ -153,6 +170,34 @@
     "incorrect_answer":"错误答案",
     "expected_direction" : "预期方向",
     "previous_level" : "回到上一级",
+    "detail": {
+      "title": "测试结果详情",
+      "loading": "正在加载测试结果...",
+      "error": "未找到测试结果",
+      "go_back": "返回",
+      "test_summary": "测试总结",
+      "average_score": "平均得分",
+      "average_logmar": "平均LogMAR",
+      "left_eye_results": "左眼结果",
+      "right_eye_results": "右眼结果",
+      "score": "得分",
+      "logmar": "LogMAR",
+      "snellen": "Snellen",
+      "vision_status": "视力状态：",
+      "eye_comparison": "眼睛对比",
+      "left": "左眼",
+      "right": "右眼",
+      "recommendations": "建议",
+      "recommendation_exam": "• 考虑安排眼科检查",
+      "recommendation_monitor": "• 定期监测视力变化",
+      "recommendation_breaks": "• 使用屏幕时定期休息",
+      "recommendation_continue": "• 继续定期视力监测",
+      "recommendation_practices": "• 保持良好的眼部健康习惯",
+      "recommendation_checkups": "• 安排年度眼科检查",
+      "take_new_test": "进行新测试",
+      "back_to_history": "返回历史记录",
+      "user_id": "用户ID："
+    },
     "info": {
       "title": "关于兰氏环测试",
       "subtitle": "一种测量视力的科学方法",
