feat: update localization, adding description

--- a/apps/memberApp/src/localization/en/en.json
+++ b/apps/memberApp/src/localization/en/en.json
@@ -118,7 +118,8 @@
     "history": "History",
     "setting": "Setting",
     "continue": "Continue",
-    "overview": "Overview"
+    "overview": "Overview",
+    "lower_score": "Lower LogMAR scores indicate better vision."
   },
   "history": {
     "title": "History",
