--- a/apps/memberApp/src/localization/zh/zh.json
+++ b/apps/memberApp/src/localization/zh/zh.json
@@ -118,7 +118,8 @@
     "history": "历史",
     "setting": "设置",
     "continue": "继续",
-    "overview": "概览"
+    "overview": "概览",
+    "lower_score": "LogMAR值越低，视力越好。"
   },
   "history": {
     "title": "历史记录",
