--- a/apps/memberApp/src/localization/zh/zh.json
+++ b/apps/memberApp/src/localization/zh/zh.json
@@ -98,7 +98,7 @@
     "change_info": "更改语言将更新应用界面。某些内容可能需要重启应用。"
   },
   "common": {
-    "ok" : "Ok",
+    "ok": "Ok",
     "yes": "是",
     "no": "否",
     "cancel": "取消",
@@ -136,7 +136,8 @@
     "view_all_results": "查看所有结果",
     "fatigue_level": "疲劳程度",
     "duration": "持续时间",
-    "blink_rate": "眨眼频率"
+    "blink_rate": "眨眼频率",
+    "perclos": "PERCLOS："
   },
   "landolt": {
     "header": "兰氏环测试",
@@ -178,12 +179,12 @@
       "title": "已达到最大录音时间",
       "message": "录音已达到最大时长限制。"
     },
-    "level" : "等级",
-    "remaining_attempts" : "剩余尝试次数",
-    "correct_answer":"正确答案",
-    "incorrect_answer":"错误答案",
-    "expected_direction" : "预期方向",
-    "previous_level" : "回到上一级",
+    "level": "等级",
+    "remaining_attempts": "剩余尝试次数",
+    "correct_answer": "正确答案",
+    "incorrect_answer": "错误答案",
+    "expected_direction": "预期方向",
+    "previous_level": "回到上一级",
     "detail": {
       "title": "测试结果详情",
       "loading": "正在加载测试结果...",
@@ -249,7 +250,63 @@
       "message": "此功能需要相机访问权限。请在设备设置中授予相机权限。"
     },
     "loading_camera": "正在加载前置相机...",
-    "capture": "拍摄"
+    "capture": "拍摄",
+    "front_camera_unavailable": "前置相机不可用",
+    "analyzing_fatigue": "正在分析疲劳状态",
+    "analyzing_subtitle": "这可能需要几分钟...",
+    "video_upload_success": "视频上传成功！您的疲劳状态已分析完成。",
+    "relax_watch_video": "放松并观看30秒视频。",
+    "loading_analysis": "正在加载疲劳分析...",
+    "failed_load_data": "加载疲劳数据失败。",
+    "current_fatigue_level": "当前疲劳程度",
+    "key_indicators": "关键指标",
+    "analysis_details": "📅 分析详情",
+    "timestamp": "时间戳：",
+    "analysis_id": "分析ID：",
+    "detailed_metrics": "详细指标",
+    "caution": "注意",
+    "normal": "正常",
+    "recommendations_for": "{{level}}疲劳程度的建议",
+    "emergency_contacts": "⚠️ 紧急联系人",
+    "emergency_message": "如果您感到严重疲劳或不适，请立即联系：",
+    "emergency_services": "紧急服务",
+    "recommendations": {
+      "severe": [
+        "立即停止驾驶并休息",
+        "如果可能，小睡20-30分钟",
+        "考虑请他人代驾",
+        "避免使用咖啡因作为临时解决方案"
+      ],
+      "moderate": [
+        "休息15分钟",
+        "呼吸新鲜空气并进行轻度运动",
+        "保持水分补充",
+        "如果可能，考虑换人驾驶"
+      ],
+      "mild": [
+        "短暂休息5-10分钟",
+        "进行轻度伸展运动",
+        "确保通风良好",
+        "密切监控您的警觉性"
+      ],
+      "normal": [
+        "继续监控您的警觉性",
+        "保持良好的驾驶姿势",
+        "每2小时定期休息",
+        "在旅途中保持水分补充"
+      ]
+    },
+    "metric_descriptions": {
+      "id": "疲劳分析结果的唯一标识符",
+      "user_id": "进行疲劳分析的用户ID",
+      "perclos": "眼睑闭合时间百分比 - 数值越高表示越困倦",
+      "avg_blink": "眨眼时眼睛保持闭合的平均时间",
+      "ear_mean": "眼睛纵横比 - 测量眼睛开放程度",
+      "ear_std": "眼睛纵横比的标准差",
+      "blink_rate": "每分钟眨眼次数",
+      "class": "AI预测的疲劳分类",
+      "created_at": "进行此分析的时间"
+    }
   },
   "splash": {
     "app_name": "视力测试"
